pv/empty_dir_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-empty-dir-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-empty-dir-ingress
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: kubia.empty.dir.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubia-loadbalancer
            port:
              number: 80
