pv/pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        ports:
        - containerPort: 27017
          protocol: TCP
      volumes:
      - name: mongodb-data
        gcePersistentDisk:
          pdName: mongodb
          fsType: ext4
---
apiVersion: v1
kind: Service
metadata:
  name: kubia-pv-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 27017
  selector:
    app: mongodb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-pv-ingress
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: kubia.empty.dir.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubia-pv-loadbalancer
            port:
              number: 80
